2. Tweaked the images and icons.

26 Sept
1. Added a sunken border to font view -- better visual containment I think.

27 Sept
More gui polishing done.
Strings changed -- PO files will be broken :(

28 Sept
1. Seems PO files are quite robust -- the strings are marked as 'fuzzy' and should still translate fairly well.
2. Today I will make a 'release' branch on the SVN and get the tarball for 0.4.2 going.

28 Sept : Feedback from Kartik
1. Removed the Version tag from .desktop file -- it's not required.
2. Removed the .png from the icon key in .desktop file -- it's not wanted.
3. Some confusion as to whether fonty will run 100% on Python 2.5, I developed this year on 2.6
4. Version bumped to 0.4.2.1

29 Sept
1. Working on a way to scan the font images and remove that leading blank space on certain fonts. Done, and included an override in settings dialog.

30 Sept
1. Spent the *ENTIRE* day fighting the damn splitter and sizers. Not really sure why or how, but I got it working okay. I also don't really know what broke from last version! 

1 Oct 2009
1. Renamed 'fp' script to 'start_fontypython' - had to edit a bunch of files. 
1.1 It turns out that fonty has been running without the segfault catcher all along. This should be remedied as of now. Backported fix to 0.4.2.x as well.
2. Taking-over the maintenance of the man page. I will leave it in the root of the tarball and Kartik will deal with it from there. Backported to 0.4.2.x

2 Oct
1. Spot changes. Made label above font views look better.
2. Started adding threading so that Fonty can spawn gucharmap or kfontview on a given fitmap in the view.

3 Oct
1. Fixed a bug in Delete Pogs -- reported by Michael Hoeft. Backported to 0.4.2.2 as well.
2. Adding an 'Voodoo' tab to Settings dialogue to house the charmap choice and the font adjustment checkbox. Wired it all up and it works!
3. (TO DO) Build some kind of button to spawn the character-map app.